--- a/.github/workflow/.deploy.yaml
+++ b/.github/workflow/.deploy.yaml
@@ -1,6 +1,9 @@
-name: Push stack to heroku
+name: Deploy
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   build:
@@ -12,7 +15,7 @@ jobs:
       with:
         heroku_api_key: ${{secrets.HEROKU_API_KEY}}
         heroku_app_name: "todos-graphql-server"
-        heroku_email: ${{secrets.HEROKU_API_KEY}}
+        heroku_email: "tevinthuku@gmail.com"
       env:
         HD_APP_BASE: "packages/server"
     - name: Release Web Client
@@ -20,7 +23,7 @@ jobs:
       with:
         heroku_api_key: ${{secrets.HEROKU_API_KEY}}
         heroku_app_name: "todos-relay-client"
-        heroku_email: ${{secrets.HEROKU_API_KEY}}
+        heroku_email: "tevinthuku@gmail.com"
       env:
         HD_APP_BASE: "packages/www"
         HD_REACT_APP_API_URL: "https://todos-graphql-server.herokuapp.com"
