--- a/packages/www/package.json
+++ b/packages/www/package.json
@@ -16,11 +16,11 @@
   },
   "scripts": {
     "flow": "flow",
-    "start": "npm run relay; concurrently --kill-others --names \"react-scripts,relay\" \"react-scripts start\" \"npm run relay --watch\"",
+    "start": "npm run relay; concurrently --kill-others --names \"react-scripts,relay\" \"react-scripts start\" \"npm run relay -- --watch\"",
     "build": "npm run relay && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "relay": "npm run relay-compiler --schema src/schema/schema.graphql --src ./src/ $@"
+    "relay": "relay-compiler --schema src/schema/schema.graphql --src ./src/ $@"
   },
   "eslintConfig": {
     "extends": [
