--- a/packages/www/package.json
+++ b/packages/www/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "flow-bin": "^0.155.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "history": "^5.0.0",
+    "react": "^0.0.0-experimental-f42431abe",
+    "react-dom": "^0.0.0-experimental-f42431abe",
     "react-relay": "^11.0.2",
+    "react-router-config": "^5.1.1",
     "react-scripts": "4.0.3",
     "relay-runtime": "^11.0.2",
     "web-vitals": "^1.0.1"
